<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/btn_st_connect"
            android:icon="@drawable/icon_stlogo"
            android:title="@string/mnu_authorise_st" />
        <item
            android:id="@+id/btn_ph_connect"
            android:icon="@drawable/icon_phlogo"
            android:title="@string/mnu_auth_ph" />
        <item
            android:id="@+id/btn_device_mnu"
            android:icon="@drawable/icon_switch"
            android:title="@string/mnu_devices" />
        <item
            android:id="@+id/btn_routine_mnu"
            android:icon="@drawable/icon_routine"
            android:title="@string/mnu_routine" />
        <item
            android:id="@+id/btn_dashboard_mnu"
            android:icon="@drawable/icon_dashboard"
            android:title="@string/mnu_dashboard" />
    </group>
</menu>
