<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorButtonNormal">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/txt_row_dl_name"
            android:text="@string/lbl_name" />

        <EditText
            android:id="@+id/txt_row_dl_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Switch
            android:id="@+id/sw_row_dl_dispname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_display_name"
            android:textOff="@string/lbl_name_hidden"
            android:textOn="@string/lbl_name_shown" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>