<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="200dp"
    android:orientation="vertical">

    <shane.pennihome.local.smartboard.ui.LabelTextbox
        android:id="@+id/srv_harm_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:label="@string/lbl_ip">

    </shane.pennihome.local.smartboard.ui.LabelTextbox>

    <shane.pennihome.local.smartboard.ui.LabelTextbox
        android:id="@+id/srv_harm_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:label="@string/port" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:paddingTop="@dimen/fab_margin">

        <Button
            android:id="@+id/btn_srv_harm_cnl"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_cancel" />

        <Button
            android:id="@+id/btn_srv_harm_ok"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_ok" />
    </TableRow>
</LinearLayout>