<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/repeaterListStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context="shane.pennihome.local.smartboard.fragments.OptionsFragment">

    <shane.pennihome.local.smartboard.ui.GroupTitle
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/lbl_options" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/set_keepOn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/lbl_keep_on" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/set_fadeOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/lbl_fade_out" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/set_fadeOutMin"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/textbox_default"
            android:inputType="number"
            android:paddingBottom="3dp"
            android:paddingEnd="2dp"
            android:paddingStart="5dp"
            android:selectAllOnFocus="true"
            android:textColor="?android:attr/textColorPrimaryInverseNoDisable" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/lbl_minutes" />

    </android.support.v7.widget.LinearLayoutCompat>

    <shane.pennihome.local.smartboard.ui.GroupTitle
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/lbl_data" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_set_clr_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_round_dark"
        android:padding="4dp"
        android:text="@string/lbl_clear_data_store" />
</android.support.v7.widget.LinearLayoutCompat>
