<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <shane.pennihome.local.smartboard.ui.GroupTitle
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/lbl_template" />

    <Spinner
        android:id="@+id/cts_templates"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:focusable="auto"
        android:foreground="?attr/selectableItemBackground" />

    <shane.pennihome.local.smartboard.ui.GroupTitle
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/lbl_preview" />

    <ImageView
        android:id="@+id/cts_preview"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/content_desc_img" />

    <CheckBox
        android:id="@+id/cts_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:button="@null"
        android:checked="false"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        android:text="@string/lbl_save_as_template" />
</android.support.v7.widget.LinearLayoutCompat>