<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/listStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:columnCount="2">


    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/btn_import_gallery"
        style="@style/blockItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_vertical|fill_horizontal"
        android:background="@drawable/btn_round"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_desc_img"
            app:srcCompat="@drawable/icon_gallery" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_gallery" />
    </android.support.v7.widget.LinearLayoutCompat>


    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/btn_import_camera"
        style="@style/blockItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_vertical|fill_horizontal"
        android:background="@drawable/btn_round"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_desc_img"
            app:srcCompat="@mipmap/icon_camera_mm_fg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_camera" />
    </android.support.v7.widget.LinearLayoutCompat>


</GridLayout>